> Please find enclose a submission to fix these problems. > > The patch adds missing the "libpgport.a" file to the installation under > "install-all-headers". It is needed by some contribs. I install the > library in "pkglibdir", but I was wondering whether it should be "libdir"? > I was wondering also whether it would make sense to have a "libpgport.so"? > > It fixes various macros which are used by contrib makefiles, especially > libpq_*dir and LDFLAGS when used under PGXS. It seems to me that they are > needed to > > It adds the ability to test and use PGXS with contribs, with "make > USE_PGXS=1". Without the macro, this is exactly as before, there should be > no difference, esp. wrt the vpath feature that seemed broken by previous > submission. So it should not harm anybody, and it is useful at least to me. > > It fixes some inconsistencies in various contrib makefiles > (useless override, ":=" instead of "=").
Fabien COELHO

--- a/contrib/cube/Makefile
+++ b/contrib/cube/Makefile
@@ -1,15 +1,24 @@
 # $PostgreSQL$
 
-subdir = contrib/cube
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULE_big = cube
 OBJS= cube.o cubeparse.o
 
 DATA_built = cube.sql
 DOCS = README.cube
 REGRESS = cube
+
+EXTRA_CLEAN = cubeparse.c cubeparse.h cubescan.c y.tab.c y.tab.h
+
+
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/cube
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
+include $(top_srcdir)/contrib/contrib-global.mk
+endif
 
 
 # cubescan is compiled as part of cubeparse
@@ -32,8 +41,3 @@ ifdef FLEX
 else
 	@$(missing) flex $< $@
 endif
-
-EXTRA_CLEAN = cubeparse.c cubeparse.h cubescan.c y.tab.c y.tab.h
-
-
-include $(top_srcdir)/contrib/contrib-global.mk
