--- a/contrib/dbase/Makefile
+++ b/contrib/dbase/Makefile
@@ -1,9 +1,5 @@
 # $PostgreSQL$
 
-subdir = contrib/dbase
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 PROGRAM = dbf2pg
 OBJS	= dbf.o dbf2pg.o endian.o
 PG_CPPFLAGS = -I$(libpq_srcdir)
@@ -18,4 +14,13 @@ PG_LIBS = $(libpq)
 DOCS = README.dbf2pg
 MAN = dbf2pg.1			# XXX not implemented
 
+
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/dbase
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
