--- a/contrib/dblink/Makefile
+++ b/contrib/dblink/Makefile
@@ -1,9 +1,5 @@
 # $PostgreSQL$
 
-subdir = contrib/dblink
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULE_big = dblink
 PG_CPPFLAGS = -I$(libpq_srcdir)
 OBJS	= dblink.o
@@ -13,4 +9,13 @@ DATA_built = dblink.sql
 DOCS = README.dblink
 REGRESS = dblink
 
+
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/dblink
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
