--- a/contrib/dbmirror/Makefile
+++ b/contrib/dbmirror/Makefile
@@ -1,10 +1,14 @@
 # $PostgreSQL$
 
-subdir = contrib/dbmirror
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULES = pending
 DOCS = README.dbmirror
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/dbmirror
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
