--- a/contrib/intagg/Makefile
+++ b/contrib/intagg/Makefile
@@ -4,12 +4,16 @@
 # by Mark L. Woodward
 # $PostgreSQL$
 
-subdir = contrib/intagg
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULES = int_aggregate
 DATA_built = int_aggregate.sql
 DOCS = README.int_aggregate
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/intagg
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
