--- a/contrib/miscutil/Makefile
+++ b/contrib/miscutil/Makefile
@@ -1,11 +1,15 @@
 # $PostgreSQL$
 
-subdir = contrib/miscutil
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULES = misc_utils
 DATA_built = misc_utils.sql
 DOCS = README.misc_utils
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/miscutil
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
