--- a/contrib/noupdate/Makefile
+++ b/contrib/noupdate/Makefile
@@ -1,11 +1,15 @@
 # $PostgreSQL$
 
-subdir = contrib/noupdate
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULES = noup
 DATA_built = noup.sql
 DOCS = README.noup
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/noupdate
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
