--- a/contrib/pgbench/Makefile
+++ b/contrib/pgbench/Makefile
@@ -1,9 +1,5 @@
 # $PostgreSQL$
 
-subdir = contrib/pgbench
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 PROGRAM = pgbench
 OBJS	= pgbench.o
 
@@ -12,4 +8,12 @@ PG_LIBS = $(libpq)
 
 DOCS = README.pgbench README.pgbench_jis
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/pgbench
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
