--- a/contrib/pgstattuple/Makefile
+++ b/contrib/pgstattuple/Makefile
@@ -6,17 +6,20 @@
 #
 #-------------------------------------------------------------------------
 
+SRCS		= pgstattuple.c
+
+MODULE_big	= pgstattuple
+OBJS		= $(SRCS:.c=.o)
+DOCS		= README.pgstattuple README.pgstattuple.euc_jp
+DATA_built	= pgstattuple.sql
+
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
 subdir = contrib/pgstattuple
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
-
-MODULE_big	:= pgstattuple
-SRCS		+= pgstattuple.c
-OBJS		:= $(SRCS:.c=.o)
-DOCS		:= README.pgstattuple README.pgstattuple.euc_jp
-DATA_built	:= pgstattuple.sql
-
-PG_CPPFLAGS	:=
-SHLIB_LINK 	:=
-
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
+
