--- a/contrib/userlock/Makefile
+++ b/contrib/userlock/Makefile
@@ -1,11 +1,15 @@
 # $PostgreSQL$
 
-subdir = contrib/userlock
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULES = user_locks
 DATA_built = user_locks.sql
 DOCS = README.user_locks
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/userlock
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
