--- a/contrib/vacuumlo/Makefile
+++ b/contrib/vacuumlo/Makefile
@@ -1,9 +1,5 @@
 # $PostgreSQL$
 
-subdir = contrib/vacuumlo
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 PROGRAM = vacuumlo
 OBJS	= vacuumlo.o
 
@@ -12,4 +8,12 @@ PG_LIBS = $(libpq)
 
 DOCS = README.vacuumlo
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/vacuumlo
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
