--- a/contrib/chkpass/Makefile
+++ b/contrib/chkpass/Makefile
@@ -1,13 +1,17 @@
 # $PostgreSQL$
 
-subdir = contrib/chkpass
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 MODULE_big = chkpass
 OBJS = chkpass.o
 SHLIB_LINK = $(filter -lcrypt, $(LIBS))
 DATA_built = chkpass.sql
 DOCS = README.chkpass
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/chkpass
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
