--- a/contrib/oid2name/Makefile
+++ b/contrib/oid2name/Makefile
@@ -1,9 +1,5 @@
 # $PostgreSQL$
 
-subdir = contrib/oid2name
-top_builddir = ../..
-include $(top_builddir)/src/Makefile.global
-
 PROGRAM = oid2name
 OBJS	= oid2name.o
 
@@ -12,4 +8,12 @@ PG_LIBS = $(libpq)
 
 DOCS = README.oid2name
 
+ifdef USE_PGXS
+PGXS = $(shell pg_config --pgxs)
+include $(PGXS)
+else
+subdir = contrib/oid2name
+top_builddir = ../..
+include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
+endif
