> Am Dienstag, 17. August 2004 14:26 schrieb Fabien COELHO: > > The patch adds missing the "libpgport.a" file to the installation under > > "install-all-headers". It is needed by some contribs. I install the > > library in "pkglibdir", but I was wondering whether it should be "libdir"?
Please find attached a small patch against current CVS head that fixes
pgport library installation so that it goes to libdir instead of
pkglibdir. It works for me.

Fabien Coelho

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -360,7 +360,7 @@ ifneq (,$(LIBOBJS))
 LIBS := -lpgport $(LIBS)
 ifdef PGXS
 # where libpgport.a is installed
-LDFLAGS := -L$(pkglibdir) $(LDFLAGS)
+LDFLAGS := -L$(libdir) $(LDFLAGS)
 else
 LDFLAGS := -L$(top_builddir)/src/port $(LDFLAGS)
 endif
