Apply patch from Steven Singer for contrib/dbmirror. Changes:
-It fixes up some bugs with handling setval calls
-Adds upgrade instructions from prior versions
-Improved the sample config file
-Fixed some things in the clean_pending script

--- a/contrib/dbmirror/slaveDatabase.conf
+++ b/contrib/dbmirror/slaveDatabase.conf
@@ -15,8 +15,21 @@ $masterPassword = "postgrespassword";
 # Where to email Error messages to
 # $errorEmailAddr = "me@mydomain.com";
 
+$slaveInfo->{"slaveName"} = "backupMachine";
 $slaveInfo->{"slaveHost"} = "backupMachine.mydomain.com";
 $slaveInfo->{"slaveDb"} = "myDatabase";
+$slaveInfo->{"slavePort"} = 5432;
 $slaveInfo->{"slaveUser"} = "postgres";
 $slaveInfo->{"slavePassword"} = "postgrespassword";
+# If uncommented then text files with SQL statements are generated instead
+# of connecting to the slave database directly. 
+# slaveDb should then be commented out.
+# $slaveInfo{"TransactionFileDirectory"} = '/tmp';
 
+#
+# The number of seconds dbmirror should sleep for between checking to see
+# if more data is ready to be mirrored.
+$sleepInterval = 60;
+
+#If you want to use syslog
+# $syslog = 1;
