Remove more traces of libpgtcl from the source tree. Also, make some semi-related SGML cleanup. Original patch from ljb220@mindspring.com, additional cleanup by Neil Conway.

--- a/configure.in
+++ b/configure.in
@@ -371,10 +371,10 @@ AC_MSG_RESULT([$enable_thread_safety])
 AC_SUBST(enable_thread_safety)
 
 #
-# Tcl/Tk
+# Optionally build Tcl modules (PL/Tcl)
 #
 AC_MSG_CHECKING([whether to build with Tcl])
-PGAC_ARG_BOOL(with, tcl, no, [  --with-tcl              build Tcl and Tk interfaces])
+PGAC_ARG_BOOL(with, tcl, no, [  --with-tcl              build Tcl modules (PL/Tcl)])
 AC_MSG_RESULT([$with_tcl])
 AC_SUBST([with_tcl])
 
