Use 'override' when appending text to LDFLAGS, so the build doesn't break if the user has defined LDFLAGS themselves.

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -361,9 +361,9 @@ ifneq (,$(LIBOBJS))
 LIBS := -lpgport $(LIBS)
 ifdef PGXS
 # where libpgport.a is installed
-LDFLAGS := -L$(libdir) $(LDFLAGS)
+override LDFLAGS := -L$(libdir) $(LDFLAGS)
 else
-LDFLAGS := -L$(top_builddir)/src/port $(LDFLAGS)
+override LDFLAGS := -L$(top_builddir)/src/port $(LDFLAGS)
 endif
 endif
 
