Make libpgport be front-end only and make libpgport_srv be a backend library that uses palloc, ereport, etc.  This simplifies the makefiles for client applications.

--- a/src/backend/Makefile
+++ b/src/backend/Makefile
@@ -26,6 +26,8 @@ ifeq ($(PORTNAME), qnx4)
 OBJS+= bootstrap/bootstrap.o
 endif
 
+# Use server version of port library
+LIBS := $(patsubst -lpgport,-lpgport_srv, $(LIBS))
 
 ##########################################################################
 
