--- a/src/bin/pg_ctl/Makefile
+++ b/src/bin/pg_ctl/Makefile
@@ -13,17 +13,14 @@ subdir = src/bin/pg_ctl
 top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
-override CPPFLAGS := -DFRONTEND -DDEF_PGPORT=$(DEF_PGPORT) -I$(libpq_srcdir) $(CPPFLAGS)
+override CPPFLAGS := -DDEF_PGPORT=$(DEF_PGPORT) -I$(libpq_srcdir) $(CPPFLAGS)
 
-OBJS=	pg_ctl.o exec.o
+OBJS=	pg_ctl.o
 
 all: submake-libpq submake-libpgport pg_ctl
 
 pg_ctl: $(OBJS) $(libpq_builddir)/libpq.a
 	$(CC) $(CFLAGS) $(OBJS) $(libpq) $(LDFLAGS) $(LIBS) -o $@$(X)
-
-exec.c: % : $(top_srcdir)/src/port/%
-	rm -f $@ && $(LN_S) $< .
 
 install: all installdirs
 	$(INSTALL_PROGRAM) pg_ctl$(X) $(DESTDIR)$(bindir)/pg_ctl$(X)
@@ -35,7 +32,7 @@ uninstall:
 	rm -f $(DESTDIR)$(bindir)/pg_ctl$(X)
 
 clean distclean maintainer-clean:
-	rm -f pg_ctl$(X) $(OBJS) exec.c
+	rm -f pg_ctl$(X) $(OBJS)
 
 
 # ensure that changes in DEF_PGPORT propagate into object file
