--- a/src/bin/pg_config/Makefile
+++ b/src/bin/pg_config/Makefile
@@ -1,17 +1,22 @@
+#-------------------------------------------------------------------------
+#
+# Makefile for src/bin/pg_controldata
+#
+# Copyright (c) 1998-2002, PostgreSQL Global Development Group
+#
 # $PostgreSQL$
+#
+#-------------------------------------------------------------------------
 
 subdir = src/bin/pg_config
 top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS=   pg_config.o exec.o
+OBJS=   pg_config.o
 
-override CPPFLAGS :=  -DFRONTEND -I$(libpq_srcdir) -DVAL_CONFIGURE="\"$(configure_args)\"" $(CPPFLAGS)
+override CPPFLAGS := -I$(libpq_srcdir) -DVAL_CONFIGURE="\"$(configure_args)\"" $(CPPFLAGS)
 
 all: submake-libpgport pg_config
-
-exec.c: % : $(top_srcdir)/src/port/%
-	rm -f $@ && $(LN_S) $< .
 
 pg_config: $(OBJS)
 	$(CC) $(CFLAGS) $(OBJS) $(LDFLAGS) $(LIBS) -o $@$(X)
@@ -26,4 +31,4 @@ uninstall:
 	rm -f $(DESTDIR)$(bindir)/pg_config
 
 clean distclean maintainer-clean:
-	rm -f pg_config$(X) $(OBJS) exec.c
+	rm -f pg_config$(X) $(OBJS)
