--- a/src/timezone/Makefile
+++ b/src/timezone/Makefile
@@ -1,6 +1,6 @@
 #-------------------------------------------------------------------------
 #
-# Makefile--
+# Makefile
 #    Makefile for the timezone library
 
 # IDENTIFICATION
@@ -12,13 +12,13 @@ subdir = src/timezone
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 
-override CPPFLAGS := -DFRONTEND $(CPPFLAGS)
+override CPPFLAGS := $(CPPFLAGS)
 
 # files to build into backend
 OBJS= localtime.o strftime.o pgtz.o
 
 # files needed to build zic utility program
-ZICOBJS= zic.o ialloc.o scheck.o localtime.o dirmod.o
+ZICOBJS= zic.o ialloc.o scheck.o localtime.o
 
 # timezone data files
 TZDATA := africa antarctica asia australasia europe northamerica southamerica \
@@ -33,9 +33,6 @@ SUBSYS.o: $(OBJS)
 zic: $(ZICOBJS)
 	$(CC) $(CFLAGS) $(ZICOBJS) $(LDFLAGS) $(LIBS) -o $@$(X)
 
-dirmod.c: % : $(top_srcdir)/src/port/%
-	rm -f $@ && $(LN_S) $< .
-
 install: all installdirs
 	./zic -d $(DESTDIR)$(datadir)/timezone $(TZDATAFILES)
 
@@ -43,4 +40,4 @@ installdirs:
 	$(mkinstalldirs) $(DESTDIR)$(datadir)
 
 clean distclean maintainer-clean:
-	rm -f SUBSYS.o zic $(OBJS) $(ZICOBJS) dirmod.c
+	rm -f SUBSYS.o zic $(OBJS) $(ZICOBJS)
