--- a/src/bin/pg_dump/Makefile
+++ b/src/bin/pg_dump/Makefile
@@ -21,6 +21,10 @@ OBJS=	pg_backup_archiver.o pg_backup_db.o pg_backup_custom.o \
 
 EXTRA_OBJS = $(top_builddir)/src/backend/parser/keywords.o
 
+# not sure why MinGW needs this but it prevents a link failure
+ifeq ($(PORTNAME), win32)
+EXTRA_OBJS += $(top_builddir)/src/port/exec.o
+endif
 
 all: submake-libpq submake-libpgport submake-backend pg_dump pg_restore pg_dumpall
 
