--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -386,6 +386,23 @@ TAS         = @TAS@
 %.bz2: %
 	$(BZIP2) -f $<
 
+ifeq ($(PORTNAME),win32)
+# Build rules to add versioninfo resources to win32 binaries
+WIN32RES += win32ver.o
+ifeq ($(PGFILESHLIB),1)
+PGFTYPE=VFT_DLL
+else
+PGFTYPE=VFT_APP
+endif
+ifneq (,$(PGAPPICON))
+PGICOSTR=$(subst /,\/,IDI_ICON ICON \"$(top_builddir)/src/port/$(PGAPPICON).ico\")
+endif
+win32ver.rc: $(top_builddir)/src/port/win32ver.rc
+	sed -e "s;FILEDESC;$(PGFILEDESC);" -e "s/VFT_APP/$(PGFTYPE)/" -e "s/_ICO_/$(PGICOSTR)/" $(top_builddir)/src/port/win32ver.rc > win32ver.rc	
+win32ver.o: win32ver.rc
+	windres -i win32ver.rc -o win32ver.o --include-dir=$(top_builddir)/src/include
+	rm -f win32ver.rc
+endif
 
 ifndef PGXS
 
