please find attached an alternate submission which addresses open item "make pgxs install by default". It is up to the committers to chose.
(1) there is only one "install" target. no more "install-all-headers".
    it simplifies/changes several makefiles.

(2) the documentation reflects the change.

(3) a minor fix on pgxs to use a nicer patch without a double slash.

Fabien Coelho

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -15,18 +15,15 @@ all:
 	@echo "All of PostgreSQL successfully made. Ready to install."
 
 install:
-	$(MAKE) -C doc install
-	$(MAKE) -C src install
-	$(MAKE) -C config install
+	$(MAKE) -C doc $@
+	$(MAKE) -C src $@
+	$(MAKE) -C config $@
 	@echo "PostgreSQL installation complete."
 
 installdirs uninstall distprep:
 	$(MAKE) -C doc $@
 	$(MAKE) -C src $@
 	$(MAKE) -C config $@
-
-install-all-headers:
-	$(MAKE) -C src $@
 
 # clean, distclean, etc should apply to contrib too, even though
 # it's not built by default
