Fix for Win32 file version sed macro, per report from Dave Page.

--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -399,7 +399,7 @@ ifneq (,$(PGAPPICON))
 PGICOSTR=$(subst /,\/,IDI_ICON ICON \"$(top_builddir)/src/port/$(PGAPPICON).ico\")
 endif
 win32ver.rc: $(top_builddir)/src/port/win32ver.rc
-	sed -e "s;FILEDESC;$(PGFILEDESC);" -e "s/VFT_APP/$(PGFTYPE)/" -e "s/_ICO_/$(PGICOSTR)/" $(top_builddir)/src/port/win32ver.rc > win32ver.rc	
+	sed -e 's;FILEDESC;$(PGFILEDESC);' -e "s/VFT_APP/$(PGFTYPE)/" -e "s/_ICO_/$(PGICOSTR)/" $(top_builddir)/src/port/win32ver.rc > win32ver.rc	
 win32ver.o: win32ver.rc
 	windres -i win32ver.rc -o win32ver.o --include-dir=$(top_builddir)/src/include
 	rm -f win32ver.rc
