Improve pgindent processing of comment after 'else'. Improve comment of pg_dump Win32 link workaround.

--- a/src/bin/pg_dump/Makefile
+++ b/src/bin/pg_dump/Makefile
@@ -22,7 +22,8 @@ OBJS=	pg_backup_archiver.o pg_backup_db.o pg_backup_custom.o \
 
 EXTRA_OBJS = $(top_builddir)/src/backend/parser/keywords.o
 
-# not sure why MinGW needs this but it prevents a link failure
+# Not sure why MinGW needs this but it prevents a link failure
+# of duplicate definitions for pg_tolower().  2004-10-06
 ifeq ($(PORTNAME), win32)
 EXTRA_OBJS += $(top_builddir)/src/port/exec.o
 endif
