Add win32 version information for pg_config Makefile.

--- a/src/bin/pg_config/Makefile
+++ b/src/bin/pg_config/Makefile
@@ -8,11 +8,12 @@
 #
 #-------------------------------------------------------------------------
 
+PGFILEDESC = "pg_config - report configuration information"
 subdir = src/bin/pg_config
 top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS=   pg_config.o
+OBJS=   pg_config.o $(WIN32RES)
 
 override CPPFLAGS := -DFRONTEND -I$(libpq_srcdir) -DVAL_CONFIGURE="\"$(configure_args)\"" $(CPPFLAGS)
 
