--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -135,7 +135,9 @@ enable_debug	= @enable_debug@
 enable_thread_safety	= @enable_thread_safety@
 
 python_includespec	= @python_includespec@
+python_libdir		= @python_libdir@
 python_libspec		= @python_libspec@
+python_additional_libs	= @python_additional_libs@
 python_configdir	= @python_configdir@
 python_version		= @python_version@
 
