--- a/src/Makefile.shlib
+++ b/src/Makefile.shlib
@@ -309,13 +309,10 @@ endif # PORTNAME == beos
 else # PORTNAME == cygwin
 
 # Cygwin case
-$(shlib) lib$(NAME).a: $(OBJS) $(DLLINIT)
+$(shlib) lib$(NAME).a: $(OBJS)
 	$(DLLTOOL) --export-all $(DLLTOOL_DEFFLAGS) --output-def $(NAME).def $(OBJS)
-	$(DLLWRAP) -o $(shlib) --dllname $(shlib) $(DLLWRAP_FLAGS) --def $(NAME).def $(OBJS) $(DLLINIT) $(SHLIB_LINK)
+	$(DLLWRAP) -o $(shlib) --dllname $(shlib) $(DLLWRAP_FLAGS) --def $(NAME).def $(OBJS) $(SHLIB_LINK)
 	$(DLLTOOL) --dllname $(shlib) $(DLLTOOL_LIBFLAGS) --def $(NAME).def --output-lib lib$(NAME).a
-
-$(DLLINIT): $(DLLINIT:%.o=%.c)
-	$(MAKE) -C $(@D) $(@F)
 
 endif # PORTNAME == cygwin
 
