> This lets you do something like: > >    ./configure LDFLAGS=-static-libgcc LDFLAGS_SL=-static-libgcc > > to produce binaries that do not depend on libgcc_s.so at all.
Oliver Jowett

--- a/configure.in
+++ b/configure.in
@@ -532,6 +532,7 @@ LDFLAGS="$LDFLAGS $LIBDIRS"
 AC_MSG_NOTICE([using CPPFLAGS=$CPPFLAGS])
 AC_MSG_NOTICE([using LDFLAGS=$LDFLAGS])
 
+AC_ARG_VAR(LDFLAGS_SL)
 
 AC_PROG_AWK
 PGAC_PATH_FLEX
