Make the standard stopword files be sought relative to share_dir, so that a tsearch2 installation can be relocatable.

--- a/contrib/tsearch2/Makefile
+++ b/contrib/tsearch2/Makefile
@@ -39,8 +39,7 @@ $(SUBDIRS:%=%-recursive):
 	$(MAKE) -C $(subst -recursive,,$@) SUBSYS.o
 
 tsearch2.sql: tsearch.sql.in
-	sed -e 's,MODULE_PATHNAME,$$libdir/$(MODULE_big),g' \
-	    -e 's,DATA_PATH,$(datadir)/contrib,g' $< >$@
+	sed -e 's,MODULE_PATHNAME,$$libdir/$(MODULE_big),g' $< >$@
 
 untsearch2.sql: untsearch.sql.in
 	cp $< $@
