--- a/configure.in
+++ b/configure.in
@@ -250,8 +250,18 @@ else
   fi
 fi
 
-# Need to specify -fno-strict-aliasing too in case it's gcc 3.3 or later.
-PGAC_PROG_CC_NO_STRICT_ALIASING
+if test "$GCC" = yes; then
+  CFLAGS="$CFLAGS -Wall -Wmissing-prototypes -Wpointer-arith"
+
+  # Some versions of GCC support some additional useful warning flags.
+  # Check whether they are supported, and add them to CFLAGS if so.
+  PGAC_PROG_CC_CFLAGS_OPT([-Wdeclaration-after-statement])
+  PGAC_PROG_CC_CFLAGS_OPT([-Wold-style-definition])
+  PGAC_PROG_CC_CFLAGS_OPT([-Wendif-labels])
+
+  # Disable strict-aliasing rules; needed for gcc 3.3+
+  PGAC_PROG_CC_CFLAGS_OPT([-fno-strict-aliasing])
+fi
 
 # supply -g if --enable-debug
 if test "$enable_debug" = yes && test "$ac_cv_prog_cc_g" = yes; then
