--- a/src/makefiles/Makefile.win32
+++ b/src/makefiles/Makefile.win32
@@ -23,6 +23,10 @@ override CPPFLAGS+= -DBUILDING_DLL
 endif
 endif
 
+ifneq (,$(findstring timezone,$(subdir)))
+override CPPFLAGS+= -DBUILDING_DLL
+endif
+
 ifneq (,$(findstring ecpg/lib,$(subdir)))
 override CPPFLAGS+= -DBUILDING_DLL
 endif
