Don't create $DESTDIR/include/internal/lib, as it is no longer used.

--- a/src/include/Makefile
+++ b/src/include/Makefile
@@ -46,7 +46,7 @@ install: all installdirs remove-old-headers
 	done
 
 installdirs:
-	$(mkinstalldirs) $(DESTDIR)$(includedir)/libpq $(DESTDIR)$(includedir_internal)/libpq $(DESTDIR)$(includedir_internal)/lib
+	$(mkinstalldirs) $(DESTDIR)$(includedir)/libpq $(DESTDIR)$(includedir_internal)/libpq
 	$(mkinstalldirs) $(addprefix $(DESTDIR)$(includedir_server)/, $(SUBDIRS))
 
 
