Contrib build fixes:
- add some additional files to the dbmirror install (approved by
ssinger)

- add a makefile for contrib/mysql, and add mysql to the list of
contribs build by default

- use xml2-config to pickup -I flags for libxml2 in contrib/xml and
contrib/xml2

Original work from Martin Pitt of Debian, minor cleanups by Neil
Conway.

--- a/contrib/mysql/Makefile
+++ b/contrib/mysql/Makefile
@@ -1,15 +1,15 @@
+# mysql conversion Perl scripts
 # $PostgreSQL$
 
-MODULES = pending
-SCRIPTS = clean_pending.pl DBMirror.pl
-DATA = AddTrigger.sql MirrorSetup.sql slaveDatabase.conf
-DOCS = README.dbmirror
+MODULES = 
+SCRIPTS = my2pg.pl  mysql2pgsql
+DOCS = README.mysql
 
 ifdef USE_PGXS
 PGXS = $(shell pg_config --pgxs)
 include $(PGXS)
 else
-subdir = contrib/dbmirror
+subdir = contrib/mysql
 top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
