--- a/contrib/xml/Makefile
+++ b/contrib/xml/Makefile
@@ -1,10 +1,12 @@
-# $Header$
+# $PostgreSQL$
 
 MODULE_big = pgxml_dom
 OBJS = pgxml_dom.o
 SHLIB_LINK = -lxml2
 DATA_built = pgxml_dom.sql
 DOCS = README.xml
+
+override CFLAGS += $(shell xml2-config --cflags)
 
 ifdef USE_PGXS
 PGXS = $(shell pg_config --pgxs)
