Adjust SHLIB_LINK for cygwin case. Reini Urban

--- a/src/Makefile.shlib
+++ b/src/Makefile.shlib
@@ -219,7 +219,7 @@ endif
 ifeq ($(PORTNAME), cygwin)
   shlib			= $(NAME)$(DLSUFFIX)
   # needed for /contrib modules, not sure why
-  SHLIB_LINK		+= -lpgport
+  SHLIB_LINK		+= $(LIBS)
   haslibarule   = yes
 endif
 
