--- a/contrib/spi/Makefile
+++ b/contrib/spi/Makefile
@@ -17,3 +17,5 @@ top_builddir = ../..
 include $(top_builddir)/src/Makefile.global
 include $(top_srcdir)/contrib/contrib-global.mk
 endif
+
+SHLIB_LINK += -L$(top_builddir)/src/port -lpgport
